# education_drf

./: Dockerfile  README.md  courses_data.json  docker-compose.yaml  payment_data.json  pyproject.toml  requirements.txt  users_data.json
config/: settings.py  urls.py
courses/: models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/migrations/: 0001_initial.py  0002_alter_lesson_lesson_owner.py  0002_initial.py  0003_rename_course_owner_course_owner_and_more.py  0003_rename_lesson_owner_lesson_course.py  0004_alter_lesson_course.py  0004_subscription.py  0005_lesson_lesson_datetime_changing.py
payment/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
payment/migrations/: 0001_initial.py  0002_alter_payment_payment_date.py  0002_initial.py  0003_product.py  0004_paystripe.py  0005_product_stripe_name_id_product_stripe_price_id.py  0006_alter_product_options.py  0007_alter_paystripe_options_remove_paystripe_stripe_id_and_more.py  0008_paystripe_stripe_payment_id_and_more.py  0009_alter_paystripe_options.py  0010_alter_paystripe_product.py
users/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: create_super_user.py  create_user.py
users/migrations/: 0001_initial.py
